Fix About paragraph alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -115,6 +115,5 @@ a:hover {
 
 #pAbout {
   width: 70%;
-  text-align: justify;
 }
 
